--- a/widget.ui
+++ b/widget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1021</width>
-    <height>618</height>
+    <width>1032</width>
+    <height>640</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,16 +17,44 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>50</y>
+     <y>60</y>
      <width>311</width>
-     <height>551</height>
+     <height>561</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="5" column="1">
-     <widget class="QPushButton" name="action6">
+    <item row="8" column="0">
+     <widget class="QPushButton" name="modeWire">
       <property name="text">
-       <string>动作6</string>
+       <string>有线模式</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QPushButton" name="actionOK">
+      <property name="text">
+       <string>OK</string>
+      </property>
+     </widget>
+    </item>
+    <item row="10" column="0">
+     <widget class="QPushButton" name="modeGolve">
+      <property name="text">
+       <string>数据手套模式</string>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="1">
+     <widget class="QPushButton" name="modeWireless">
+      <property name="text">
+       <string>无线模式</string>
+      </property>
+     </widget>
+    </item>
+    <item row="11" column="1">
+     <widget class="QPushButton" name="modePiano">
+      <property name="text">
+       <string>弹琴</string>
       </property>
      </widget>
     </item>
@@ -44,22 +72,12 @@
       </item>
      </widget>
     </item>
-    <item row="2" column="1">
-     <widget class="QPushButton" name="closeButton">
+    <item row="7" column="0">
+     <widget class="QPushButton" name="actionACTION33">
       <property name="text">
-       <string>关闭串口</string>
+       <string>33种动作</string>
       </property>
      </widget>
-    </item>
-    <item row="10" column="0">
-     <widget class="QPushButton" name="modeGolve">
-      <property name="text">
-       <string>数据手套模式</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QComboBox" name="serialBox"/>
     </item>
     <item row="10" column="1">
      <widget class="QPushButton" name="golveAdjustButton">
@@ -76,86 +94,30 @@
      </widget>
     </item>
     <item row="6" column="1">
-     <widget class="QPushButton" name="action8">
+     <widget class="QPushButton" name="actionBACKMOVE">
       <property name="text">
-       <string>动作8</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="1">
-     <widget class="QPushButton" name="action2">
-      <property name="text">
-       <string>动作2</string>
-      </property>
-     </widget>
-    </item>
-    <item row="7" column="1">
-     <widget class="QPushButton" name="resume">
-      <property name="text">
-       <string>复位</string>
-      </property>
-     </widget>
-    </item>
-    <item row="6" column="0">
-     <widget class="QPushButton" name="action7">
-      <property name="text">
-       <string>动作7</string>
-      </property>
-     </widget>
-    </item>
-    <item row="8" column="0">
-     <widget class="QPushButton" name="modeWire">
-      <property name="text">
-       <string>有线模式</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0">
-     <widget class="QLabel" name="serialLabel">
-      <property name="text">
-       <string>串口</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="0">
-     <widget class="QPushButton" name="action3">
-      <property name="text">
-       <string>动作3</string>
-      </property>
-     </widget>
-    </item>
-    <item row="7" column="0">
-     <widget class="QPushButton" name="action9">
-      <property name="text">
-       <string>动作9</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="baudrateLabel">
-      <property name="text">
-       <string>波特率</string>
-      </property>
-     </widget>
-    </item>
-    <item row="8" column="1">
-     <widget class="QPushButton" name="modeWireless">
-      <property name="text">
-       <string>无线模式</string>
+       <string>反向驱动</string>
       </property>
      </widget>
     </item>
     <item row="4" column="1">
-     <widget class="QPushButton" name="action4">
+     <widget class="QPushButton" name="actionWRISTFRONTANDBACK">
       <property name="text">
-       <string>动作4</string>
+       <string>手腕前后</string>
       </property>
      </widget>
     </item>
-    <item row="3" column="0">
-     <widget class="QPushButton" name="action1">
+    <item row="2" column="1">
+     <widget class="QPushButton" name="closeButton">
       <property name="text">
-       <string>动作1</string>
+       <string>关闭串口</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0">
+     <widget class="QPushButton" name="actionWRISTLEFTANDRIGHT">
+      <property name="text">
+       <string>手腕左右</string>
       </property>
      </widget>
     </item>
@@ -166,10 +128,10 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="0">
-     <widget class="QPushButton" name="action5">
+    <item row="7" column="1">
+     <widget class="QPushButton" name="actionRESUME">
       <property name="text">
-       <string>动作5</string>
+       <string>复位</string>
       </property>
      </widget>
     </item>
@@ -187,15 +149,67 @@
       </property>
      </widget>
     </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="baudrateLabel">
+      <property name="text">
+       <string>波特率</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QLabel" name="serialLabel">
+      <property name="text">
+       <string>串口</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QComboBox" name="serialBox"/>
+    </item>
+    <item row="3" column="1">
+     <widget class="QPushButton" name="actionYEAH">
+      <property name="text">
+       <string>耶</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="0">
+     <widget class="QPushButton" name="actionSWING">
+      <property name="text">
+       <string>手指SWING</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1">
+     <widget class="QPushButton" name="actionWIDEANDSHRINK">
+      <property name="text">
+       <string>手指开合</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="0">
+     <widget class="QPushButton" name="actionPOINTFINGER">
+      <property name="text">
+       <string>对指</string>
+      </property>
+     </widget>
+    </item>
+    <item row="12" column="0">
+     <widget class="QPushButton" name="modeObject">
+      <property name="text">
+       <string>物品分类</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QWidget" name="gridLayoutWidget_2">
    <property name="geometry">
     <rect>
-     <x>350</x>
+     <x>360</x>
      <y>10</y>
-     <width>651</width>
-     <height>38</height>
+     <width>641</width>
+     <height>41</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout_2">
@@ -235,8 +249,8 @@
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>50</y>
+     <x>360</x>
+     <y>60</y>
      <width>261</width>
      <height>481</height>
     </rect>
@@ -400,8 +414,8 @@
   <widget class="QWidget" name="verticalLayoutWidget_2">
    <property name="geometry">
     <rect>
-     <x>610</x>
-     <y>50</y>
+     <x>620</x>
+     <y>60</y>
      <width>51</width>
      <height>481</height>
     </rect>
@@ -476,7 +490,7 @@
    <property name="geometry">
     <rect>
      <x>680</x>
-     <y>40</y>
+     <y>60</y>
      <width>271</width>
      <height>481</height>
     </rect>
@@ -641,7 +655,7 @@
    <property name="geometry">
     <rect>
      <x>950</x>
-     <y>40</y>
+     <y>60</y>
      <width>51</width>
      <height>481</height>
     </rect>
@@ -717,8 +731,8 @@
     <rect>
      <x>20</x>
      <y>10</y>
-     <width>271</width>
-     <height>31</height>
+     <width>311</width>
+     <height>41</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_5">
@@ -734,9 +748,9 @@
   <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>570</y>
-     <width>651</width>
+     <x>360</x>
+     <y>590</y>
+     <width>641</width>
      <height>31</height>
     </rect>
    </property>
@@ -788,9 +802,9 @@
   <widget class="QWidget" name="horizontalLayoutWidget_2">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>540</y>
-     <width>651</width>
+     <x>360</x>
+     <y>560</y>
+     <width>641</width>
      <height>31</height>
     </rect>
    </property>
