--- a/widget.ui
+++ b/widget.ui
@@ -197,7 +197,7 @@
     <item row="12" column="0">
      <widget class="QPushButton" name="modeObject">
       <property name="text">
-       <string>物品分类</string>
+       <string>ros机械臂</string>
       </property>
      </widget>
     </item>
